@@ -106,6 +106,9 @@ public class TestFsck {
   static final Pattern numCorruptBlocksPattern = Pattern.compile(
       ".*Corrupt blocks:\t\t([0123456789]*).*");
   
+  private static final String LINE_SEPARATOR =
+    System.getProperty("line.separator");
+
   static String runFsck(Configuration conf, int expectedErrCode, 
                         boolean checkErrorCode,String... path) 
                         throws Exception {
@@ -321,7 +324,7 @@ public class TestFsck {
       while (true) {
         outStr = runFsck(conf, 1, false, "/");
         String numCorrupt = null;
-        for (String line : outStr.split("\n")) {
+        for (String line : outStr.split(LINE_SEPARATOR)) {
           Matcher m = numCorruptBlocksPattern.matcher(line);
           if (m.matches()) {
             numCorrupt = m.group(1);
