@@ -526,6 +526,9 @@ Release 2.1.0-beta - UNRELEASED
     HDFS-4783. TestDelegationTokensWithHA#testHAUtilClonesDelegationTokens fails
     on Windows. (cnauroth)
 
+    HDFS-4818. Several HDFS tests that attempt to make directories unusable do
+    not work correctly on Windows. (cnauroth)
+
   BREAKDOWN OF HDFS-2802 HDFS SNAPSHOT SUBTASKS AND RELATED JIRAS
 
     HDFS-4076. Support snapshot of single files.  (szetszwo)
